Version ?????
-------------

Engine
- URL pseudo-headers now always work (detection was case-sensitive)
- Improved processing (less function calls while scanning text)
- Bug fix: pattern "(f*)\1bar" was not matching "foobar"

GUI
- Wider "active configuration" field on Monitor screen
- Better synchronization between filter edition window and config window

Proxy
- Fixed freezing on 304 responses
- SSL tunneling (https can now go through Proximodo, though not filtered)

Other
- Replaced many includes by forward declarations, to reduce dependencies
- Sources now compile with Visual C++

--------------------------------------------------------------------------------
Version 0.2.3 (Apr 20th, 2005)
-------------

Engine
- Bypass URL and URL Match now work like in Proxomitron
- Fixed $TYPE() which was causing hangings

Proxy
- Don't reorder or concatenate headers (cookies must not be concatenated!)
- Idle persistent connections expire after 10 seconds

GUI
- Created a monitoring screen, with checkboxes, statistics and abort button
- Can run any external program when Proximodo starts
- Opening default browser on start-up should now work fine under Linux
- Compatibility with wxWidgets 2.5.4
- Changed colors and font in Log window
- Simplified internal management of windows
- Fixed bad drag&drop in config tree

Other
- Invalid filters are now loaded too
- Eliminated memory leaks

--------------------------------------------------------------------------------
Version 0.2.1 (Jan 8th, 2005)
-------------

Engine
- Content of $RDIR and $JUMP is now expanded
- "URL" header filters will scan the URL _including_ the http://
- $TST won't match if variable is empty
- Added usage of \k in text filters
- Added $TST((expandedText)=pattern) and $TST((expandedText))
- Note: unknown commands being ignored, you can use $NOP(some comment text)
- stars are now optional in [#n:n] and {n,n}
- Added [%nn-%nn]  [%nn-z]  and  [z-%nn]  (all are case-sensitive)